# edgar_sleuth

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  batch.jsonl  config.py  datastore.py  design.md  edgar.py  env  logger_config.json  logger_config.yaml  main.py  pyproject.toml  requirements.txt  splitter.py
.github/workflows/: python_build.yaml
datastore/: __init__.py
edgar/: __init__.py
edgar_sleuth/: __init__.py  __main__.py  trustee.py
llm/: embedding.py  extraction.py  util.py
scratch/: company_tickers_mf.json  mf_ticker.py
sleuth/: __init__.py  __main__.py  datastore.py  edgar.py  processor.py  splitter.py  trustee.py
sleuth/llm/: algo.py  embedding.py  extraction.py
sql/: sample.sql  stats.sql
tests/: conftest.py  test_datastore.py  test_edgar.py  test_edgar_sleuth.py  test_new_distance_algo.py  test_sleuth.py  test_splitter.py
tests/data/cache/: dummy.txt
tests/data/cache/edgar/data/1035018/000119312520000327/: 0001193125-20-000327-index-headers.html  d851854d485bpos.htm
tests/data/cache/edgar/data/1274676/000091957424004904/: 0000919574-24-004904-index-headers.html  abmis-20240827.htm
